--- a/mods/aetheric-tetranomicon.pw.toml
+++ b/mods/aetheric-tetranomicon.pw.toml
@@ -1,13 +1,13 @@
-filename = 'aetheric_tetranomicon-1.1.2-1.20.1.jar'
-name = 'Aetheric Tetranomicon'
-side = 'both'
+name = "Aetheric Tetranomicon"
+filename = "aetheric_tetranomicon-1.1.2-1.20.1.jar"
+side = "both"
 
 [download]
-hash = '05c005a27cee8471459573bb66f6ec5c3eaaa86e'
-hash-format = 'sha1'
-mode = 'metadata:curseforge'
-url = ''
+hash-format = "sha1"
+hash = "05c005a27cee8471459573bb66f6ec5c3eaaa86e"
+mode = "metadata:curseforge"
 
+[update]
 [update.curseforge]
 file-id = 5241644
 project-id = 966902
