--- a/mods/caelus.pw.toml
+++ b/mods/caelus.pw.toml
@@ -1,13 +1,13 @@
-filename = 'caelus-forge-3.2.0-1.20.1.jar'
-name = 'Caelus API (Forge/NeoForge)'
-side = 'both'
+name = "Caelus API"
+filename = "caelus-forge-3.2.0+1.20.1.jar"
+side = "both"
 
 [download]
-hash = 'fa834f140bf7dce7b67c29b46cb531f4309d3209'
-hash-format = 'sha1'
-mode = 'metadata:curseforge'
-url = ''
+url = "https://cdn.modrinth.com/data/40FYwb4z/versions/mRry0DgY/caelus-forge-3.2.0%2B1.20.1.jar"
+hash-format = "sha1"
+hash = "d14e8ee892d4d8764f523ad0e89bdcfc061fb007"
 
-[update.curseforge]
-file-id = 5281700
-project-id = 308989
+[update]
+[update.modrinth]
+mod-id = "40FYwb4z"
+version = "mRry0DgY"
