--- a/mods/connectivity.pw.toml
+++ b/mods/connectivity.pw.toml
@@ -1,13 +1,13 @@
-filename = 'connectivity-1.20.1-5.5.jar'
-name = 'Connectivity[Forge/Fabric]'
-side = 'both'
+name = "Connectivity[Forge/Fabric]"
+filename = "connectivity-1.20.1-5.5.jar"
+side = "both"
 
 [download]
-hash = '16ef782df574b993f7096bbf9f19dd350f784879'
-hash-format = 'sha1'
-mode = 'metadata:curseforge'
-url = ''
+hash-format = "sha1"
+hash = "16ef782df574b993f7096bbf9f19dd350f784879"
+mode = "metadata:curseforge"
 
+[update]
 [update.curseforge]
 file-id = 5181534
 project-id = 470193
