--- a/mods/corail-tombstone.pw.toml
+++ b/mods/corail-tombstone.pw.toml
@@ -1,13 +1,13 @@
-filename = 'tombstone-1.20.1-8.6.5.jar'
-name = 'Corail Tombstone'
-side = 'both'
+name = "Corail Tombstone"
+filename = "tombstone-1.20.1-8.6.5.jar"
+side = "both"
 
 [download]
-hash = '4ba9047a36435ad7fc518e0a21afcaa237bb8ca7'
-hash-format = 'sha1'
-mode = 'metadata:curseforge'
-url = ''
+hash-format = "sha1"
+hash = "4ba9047a36435ad7fc518e0a21afcaa237bb8ca7"
+mode = "metadata:curseforge"
 
+[update]
 [update.curseforge]
 file-id = 5201363
 project-id = 243707
