--- a/mods/farsight.pw.toml
+++ b/mods/farsight.pw.toml
@@ -1,13 +1,13 @@
-filename = 'farsight-1.20.1-3.6.jar'
-name = 'Farsight [Forge]'
-side = 'both'
+name = "Farsight [Forge]"
+filename = "farsight-1.20.1-3.6.jar"
+side = "both"
 
 [download]
-hash = 'b58119fea950fffec3350d7f5792558a3339046b'
-hash-format = 'sha1'
-mode = 'metadata:curseforge'
-url = ''
+hash-format = "sha1"
+hash = "b58119fea950fffec3350d7f5792558a3339046b"
+mode = "metadata:curseforge"
 
+[update]
 [update.curseforge]
 file-id = 4870168
 project-id = 495693
