--- a/mods/tetranomicon.pw.toml
+++ b/mods/tetranomicon.pw.toml
@@ -1,13 +1,13 @@
-filename = 'tetranomicon-1.5.3-1.20.1.jar'
-name = 'Tetranomicon'
-side = 'both'
+name = "Tetranomicon"
+filename = "tetranomicon-1.5.3-1.20.1.jar"
+side = "both"
 
 [download]
-hash = '367337b34fe379104ed51051b7ca084bb01c4625'
-hash-format = 'sha1'
-mode = 'metadata:curseforge'
-url = ''
+hash-format = "sha1"
+hash = "367337b34fe379104ed51051b7ca084bb01c4625"
+mode = "metadata:curseforge"
 
+[update]
 [update.curseforge]
 file-id = 5099572
 project-id = 445385
